@@ -1,3 +1,7 @@
+2012-01-04  Ozkan Sezer  <sezeroz@gmail.com>
+
+	* wingdi.h: Uglify the function param names a bit for bug #3469308
+
 2011-12-14  Ozkan Sezer  <sezeroz@gmail.com>
 
 	* winnls.h (WC_ERR_INVALID_CHARS): New macro, defined as 0x80.
